add function to convert mps to abab form in mps_simple

--- a/pyutils/spinAnalysis/spin-spin correlation function - fe2s2.ipynb
+++ b/pyutils/spinAnalysis/spin-spin correlation function - fe2s2.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "81ebc68d-f1dd-4e16-ae20-cc13f8ee702a",
    "metadata": {},
    "outputs": [],
@@ -695,17 +695,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e63ee96-ee41-43be-938a-61df40c5a553",
+   "metadata": {},
+   "source": [
+    "# Convert from abab to aabb"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "81fd6352-331d-473d-9558-b57410ccaccf",
+   "execution_count": 3,
+   "id": "732c0b25-696a-4fe3-8aac-ed8bce97a03b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 4, 1),\n",
+       " (1, 4, 1),\n",
+       " (1, 4, 2),\n",
+       " (2, 4, 3),\n",
+       " (3, 4, 3),\n",
+       " (3, 4, 3),\n",
+       " (3, 4, 4),\n",
+       " (4, 4, 5),\n",
+       " (5, 4, 6),\n",
+       " (6, 4, 6),\n",
+       " (6, 4, 6),\n",
+       " (6, 4, 5),\n",
+       " (5, 4, 4),\n",
+       " (4, 4, 4),\n",
+       " (4, 4, 3),\n",
+       " (3, 4, 3),\n",
+       " (3, 4, 2),\n",
+       " (2, 4, 1),\n",
+       " (1, 4, 4),\n",
+       " (4, 4, 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mps_simple\n",
+    "\n",
+    "mps_simple.shapes(sites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6bce1e8b-7ddf-41d6-bd05-017d53cb1a46",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sites_new = mps_simple.to_abab(sites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "98793f8b-897f-4f3e-97eb-00aff0d7f695",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 2),\n",
+       " (2, 2, 2),\n",
+       " (2, 2, 4),\n",
+       " (4, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 6),\n",
+       " (6, 2, 4),\n",
+       " (4, 2, 8),\n",
+       " (8, 2, 5),\n",
+       " (5, 2, 10),\n",
+       " (10, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 10),\n",
+       " (10, 2, 5),\n",
+       " (5, 2, 8),\n",
+       " (8, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 6),\n",
+       " (6, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 3),\n",
+       " (3, 2, 4),\n",
+       " (4, 2, 2),\n",
+       " (2, 2, 2),\n",
+       " (2, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 4),\n",
+       " (4, 2, 2),\n",
+       " (2, 2, 1)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mps_simple.shapes(sites_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "04da3f6d-6b78-45de-9ba2-6857776b9926",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check i= 39  site.shape= (2, 2, 1)  |S-I|= 0.0\n",
+      "check i= 38  site.shape= (4, 2, 2)  |S-I|= 9.155133597044475e-16\n",
+      "check i= 37  site.shape= (1, 2, 4)  |S-I|= 0.0\n",
+      "check i= 36  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 35  site.shape= (2, 2, 1)  |S-I|= 0.0\n",
+      "check i= 34  site.shape= (2, 2, 2)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 33  site.shape= (4, 2, 2)  |S-I|= 0.0\n",
+      "check i= 32  site.shape= (3, 2, 4)  |S-I|= 3.8459253727671276e-16\n",
+      "check i= 31  site.shape= (3, 2, 3)  |S-I|= 0.0\n",
+      "check i= 30  site.shape= (3, 2, 3)  |S-I|= 3.8459253727671276e-16\n",
+      "check i= 29  site.shape= (6, 2, 3)  |S-I|= 0.0\n",
+      "check i= 28  site.shape= (4, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 27  site.shape= (4, 2, 4)  |S-I|= 0.0\n",
+      "check i= 26  site.shape= (4, 2, 4)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 25  site.shape= (8, 2, 4)  |S-I|= 0.0\n",
+      "check i= 24  site.shape= (5, 2, 8)  |S-I|= 6.661338147750939e-16\n",
+      "check i= 23  site.shape= (10, 2, 5)  |S-I|= 0.0\n",
+      "check i= 22  site.shape= (6, 2, 10)  |S-I|= 5.438959822042073e-16\n",
+      "check i= 21  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 20  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 19  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 18  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 17  site.shape= (10, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 16  site.shape= (5, 2, 10)  |S-I|= 1.0235750533041806e-15\n",
+      "check i= 15  site.shape= (8, 2, 5)  |S-I|= 0.0\n",
+      "check i= 14  site.shape= (4, 2, 8)  |S-I|= 8.881784197001252e-16\n",
+      "check i= 13  site.shape= (6, 2, 4)  |S-I|= 0.0\n",
+      "check i= 12  site.shape= (3, 2, 6)  |S-I|= 1.1644117316690922e-15\n",
+      "check i= 11  site.shape= (3, 2, 3)  |S-I|= 0.0\n",
+      "check i= 10  site.shape= (3, 2, 3)  |S-I|= 3.8459253727671276e-16\n",
+      "check i= 9  site.shape= (3, 2, 3)  |S-I|= 0.0\n",
+      "check i= 8  site.shape= (3, 2, 3)  |S-I|= 3.8459253727671276e-16\n",
+      "check i= 7  site.shape= (4, 2, 3)  |S-I|= 0.0\n",
+      "check i= 6  site.shape= (2, 2, 4)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 5  site.shape= (2, 2, 2)  |S-I|= 0.0\n",
+      "check i= 4  site.shape= (1, 2, 2)  |S-I|= 2.220446049250313e-16\n",
+      "check i= 3  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 2  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 1  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 0  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "MPS is in RCF\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mps_simple.checkRCF(sites_new)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "732c0b25-696a-4fe3-8aac-ed8bce97a03b",
+   "id": "42cad5c2-e938-412b-beba-d6ddeb35e922",
    "metadata": {},
    "outputs": [],
    "source": []
