--- a/pyutils/spinAnalysis/spin-spin correlation function - fe8s7.ipynb
+++ b/pyutils/spinAnalysis/spin-spin correlation function - fe8s7.ipynb
@@ -511,7 +511,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x120e68a30>]"
+       "[<matplotlib.lines.Line2D at 0x119144790>]"
       ]
      },
      "execution_count": 5,
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d001969d-17f7-479a-b86a-8cf51a807951",
    "metadata": {},
    "outputs": [
@@ -672,9 +672,367 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc5392b6-7f59-4b09-ac92-0bc22e24c424",
+   "metadata": {},
+   "source": [
+    "# Convert to abab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e7cf133c-33bf-44c0-9f3e-234bea40e98d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sites_new = mps_simple.to_abab(sites)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2ef048bf-4d2c-4c5a-8b9c-4c3a1c44333d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 2),\n",
+       " (2, 2, 2),\n",
+       " (2, 2, 4),\n",
+       " (4, 2, 3),\n",
+       " (3, 2, 6),\n",
+       " (6, 2, 4),\n",
+       " (4, 2, 8),\n",
+       " (8, 2, 5),\n",
+       " (5, 2, 5),\n",
+       " (5, 2, 5),\n",
+       " (5, 2, 10),\n",
+       " (10, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 12),\n",
+       " (12, 2, 7),\n",
+       " (7, 2, 12),\n",
+       " (12, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 12),\n",
+       " (12, 2, 7),\n",
+       " (7, 2, 12),\n",
+       " (12, 2, 6),\n",
+       " (6, 2, 12),\n",
+       " (12, 2, 7),\n",
+       " (7, 2, 12),\n",
+       " (12, 2, 6),\n",
+       " (6, 2, 12),\n",
+       " (12, 2, 7),\n",
+       " (7, 2, 12),\n",
+       " (12, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 12),\n",
+       " (12, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 14),\n",
+       " (14, 2, 8),\n",
+       " (8, 2, 8),\n",
+       " (8, 2, 8),\n",
+       " (8, 2, 16),\n",
+       " (16, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 9),\n",
+       " (9, 2, 16),\n",
+       " (16, 2, 8),\n",
+       " (8, 2, 14),\n",
+       " (14, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 7),\n",
+       " (7, 2, 12),\n",
+       " (12, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 6),\n",
+       " (6, 2, 10),\n",
+       " (10, 2, 5),\n",
+       " (5, 2, 5),\n",
+       " (5, 2, 5),\n",
+       " (5, 2, 10),\n",
+       " (10, 2, 6),\n",
+       " (6, 2, 10),\n",
+       " (10, 2, 5),\n",
+       " (5, 2, 10),\n",
+       " (10, 2, 6),\n",
+       " (6, 2, 10),\n",
+       " (10, 2, 5),\n",
+       " (5, 2, 8),\n",
+       " (8, 2, 4),\n",
+       " (4, 2, 8),\n",
+       " (8, 2, 5),\n",
+       " (5, 2, 8),\n",
+       " (8, 2, 4),\n",
+       " (4, 2, 8),\n",
+       " (8, 2, 5),\n",
+       " (5, 2, 8),\n",
+       " (8, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 4),\n",
+       " (4, 2, 6),\n",
+       " (6, 2, 3),\n",
+       " (3, 2, 4),\n",
+       " (4, 2, 2),\n",
+       " (2, 2, 2),\n",
+       " (2, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 1),\n",
+       " (1, 2, 4),\n",
+       " (4, 2, 2),\n",
+       " (2, 2, 1)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mps_simple.shapes(sites_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "551f2cbf-7496-47d6-84f3-71970379555b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check i= 145  site.shape= (2, 2, 1)  |S-I|= 0.0\n",
+      "check i= 144  site.shape= (4, 2, 2)  |S-I|= 9.155133597044475e-16\n",
+      "check i= 143  site.shape= (1, 2, 4)  |S-I|= 0.0\n",
+      "check i= 142  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 141  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 140  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 139  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 138  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 137  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 136  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 135  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 134  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 133  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 132  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 131  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 130  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 129  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 128  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 127  site.shape= (2, 2, 1)  |S-I|= 0.0\n",
+      "check i= 126  site.shape= (2, 2, 2)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 125  site.shape= (4, 2, 2)  |S-I|= 0.0\n",
+      "check i= 124  site.shape= (3, 2, 4)  |S-I|= 3.8459253727671276e-16\n",
+      "check i= 123  site.shape= (6, 2, 3)  |S-I|= 0.0\n",
+      "check i= 122  site.shape= (4, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 121  site.shape= (4, 2, 4)  |S-I|= 0.0\n",
+      "check i= 120  site.shape= (4, 2, 4)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 119  site.shape= (4, 2, 4)  |S-I|= 0.0\n",
+      "check i= 118  site.shape= (4, 2, 4)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 117  site.shape= (8, 2, 4)  |S-I|= 0.0\n",
+      "check i= 116  site.shape= (5, 2, 8)  |S-I|= 6.661338147750939e-16\n",
+      "check i= 115  site.shape= (8, 2, 5)  |S-I|= 0.0\n",
+      "check i= 114  site.shape= (4, 2, 8)  |S-I|= 8.881784197001252e-16\n",
+      "check i= 113  site.shape= (8, 2, 4)  |S-I|= 0.0\n",
+      "check i= 112  site.shape= (5, 2, 8)  |S-I|= 6.661338147750939e-16\n",
+      "check i= 111  site.shape= (8, 2, 5)  |S-I|= 0.0\n",
+      "check i= 110  site.shape= (4, 2, 8)  |S-I|= 8.881784197001252e-16\n",
+      "check i= 109  site.shape= (8, 2, 4)  |S-I|= 0.0\n",
+      "check i= 108  site.shape= (5, 2, 8)  |S-I|= 6.661338147750939e-16\n",
+      "check i= 107  site.shape= (10, 2, 5)  |S-I|= 0.0\n",
+      "check i= 106  site.shape= (6, 2, 10)  |S-I|= 5.438959822042073e-16\n",
+      "check i= 105  site.shape= (10, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 104  site.shape= (5, 2, 10)  |S-I|= 1.0235750533041806e-15\n",
+      "check i= 103  site.shape= (10, 2, 5)  |S-I|= 0.0\n",
+      "check i= 102  site.shape= (6, 2, 10)  |S-I|= 5.438959822042073e-16\n",
+      "check i= 101  site.shape= (10, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 100  site.shape= (5, 2, 10)  |S-I|= 1.0235750533041806e-15\n",
+      "check i= 99  site.shape= (5, 2, 5)  |S-I|= 0.0\n",
+      "check i= 98  site.shape= (5, 2, 5)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 97  site.shape= (10, 2, 5)  |S-I|= 0.0\n",
+      "check i= 96  site.shape= (6, 2, 10)  |S-I|= 5.438959822042073e-16\n",
+      "check i= 95  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 94  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 93  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 92  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 91  site.shape= (12, 2, 6)  |S-I|= 0.0\n",
+      "check i= 90  site.shape= (7, 2, 12)  |S-I|= 1.5059797815742444e-15\n",
+      "check i= 89  site.shape= (7, 2, 7)  |S-I|= 0.0\n",
+      "check i= 88  site.shape= (7, 2, 7)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 87  site.shape= (7, 2, 7)  |S-I|= 0.0\n",
+      "check i= 86  site.shape= (7, 2, 7)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 85  site.shape= (14, 2, 7)  |S-I|= 0.0\n",
+      "check i= 84  site.shape= (8, 2, 14)  |S-I|= 1.2060109012779447e-15\n",
+      "check i= 83  site.shape= (16, 2, 8)  |S-I|= 0.0\n",
+      "check i= 82  site.shape= (9, 2, 16)  |S-I|= 2.4575834280036906e-15\n",
+      "check i= 81  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 80  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 79  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 78  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 77  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 76  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 75  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 74  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 73  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 72  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 71  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 70  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 69  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 68  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 67  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 66  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 65  site.shape= (9, 2, 9)  |S-I|= 0.0\n",
+      "check i= 64  site.shape= (9, 2, 9)  |S-I|= 2.3498992183808826e-15\n",
+      "check i= 63  site.shape= (16, 2, 9)  |S-I|= 6.2803698347351e-16\n",
+      "check i= 62  site.shape= (8, 2, 16)  |S-I|= 3.6955587428207345e-15\n",
+      "check i= 61  site.shape= (8, 2, 8)  |S-I|= 0.0\n",
+      "check i= 60  site.shape= (8, 2, 8)  |S-I|= 1.4043333874306805e-15\n",
+      "check i= 59  site.shape= (14, 2, 8)  |S-I|= 0.0\n",
+      "check i= 58  site.shape= (7, 2, 14)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 57  site.shape= (7, 2, 7)  |S-I|= 0.0\n",
+      "check i= 56  site.shape= (7, 2, 7)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 55  site.shape= (7, 2, 7)  |S-I|= 0.0\n",
+      "check i= 54  site.shape= (7, 2, 7)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 53  site.shape= (12, 2, 7)  |S-I|= 0.0\n",
+      "check i= 52  site.shape= (6, 2, 12)  |S-I|= 1.5857156540161844e-15\n",
+      "check i= 51  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 50  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 49  site.shape= (12, 2, 6)  |S-I|= 0.0\n",
+      "check i= 48  site.shape= (7, 2, 12)  |S-I|= 1.5059797815742444e-15\n",
+      "check i= 47  site.shape= (12, 2, 7)  |S-I|= 0.0\n",
+      "check i= 46  site.shape= (6, 2, 12)  |S-I|= 1.5857156540161844e-15\n",
+      "check i= 45  site.shape= (12, 2, 6)  |S-I|= 0.0\n",
+      "check i= 44  site.shape= (7, 2, 12)  |S-I|= 1.5059797815742444e-15\n",
+      "check i= 43  site.shape= (12, 2, 7)  |S-I|= 0.0\n",
+      "check i= 42  site.shape= (6, 2, 12)  |S-I|= 1.5857156540161844e-15\n",
+      "check i= 41  site.shape= (12, 2, 6)  |S-I|= 0.0\n",
+      "check i= 40  site.shape= (7, 2, 12)  |S-I|= 1.5059797815742444e-15\n",
+      "check i= 39  site.shape= (12, 2, 7)  |S-I|= 0.0\n",
+      "check i= 38  site.shape= (6, 2, 12)  |S-I|= 1.5857156540161844e-15\n",
+      "check i= 37  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 36  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 35  site.shape= (12, 2, 6)  |S-I|= 0.0\n",
+      "check i= 34  site.shape= (7, 2, 12)  |S-I|= 1.5059797815742444e-15\n",
+      "check i= 33  site.shape= (12, 2, 7)  |S-I|= 0.0\n",
+      "check i= 32  site.shape= (6, 2, 12)  |S-I|= 1.5857156540161844e-15\n",
+      "check i= 31  site.shape= (6, 2, 6)  |S-I|= 0.0\n",
+      "check i= 30  site.shape= (6, 2, 6)  |S-I|= 9.42055475210265e-16\n",
+      "check i= 29  site.shape= (10, 2, 6)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 28  site.shape= (5, 2, 10)  |S-I|= 1.0235750533041806e-15\n",
+      "check i= 27  site.shape= (5, 2, 5)  |S-I|= 0.0\n",
+      "check i= 26  site.shape= (5, 2, 5)  |S-I|= 6.280369834735101e-16\n",
+      "check i= 25  site.shape= (8, 2, 5)  |S-I|= 0.0\n",
+      "check i= 24  site.shape= (4, 2, 8)  |S-I|= 8.881784197001252e-16\n",
+      "check i= 23  site.shape= (6, 2, 4)  |S-I|= 0.0\n",
+      "check i= 22  site.shape= (3, 2, 6)  |S-I|= 1.1046579618885443e-15\n",
+      "check i= 21  site.shape= (4, 2, 3)  |S-I|= 0.0\n",
+      "check i= 20  site.shape= (2, 2, 4)  |S-I|= 3.1401849173675503e-16\n",
+      "check i= 19  site.shape= (2, 2, 2)  |S-I|= 0.0\n",
+      "check i= 18  site.shape= (1, 2, 2)  |S-I|= 2.220446049250313e-16\n",
+      "check i= 17  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 16  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 15  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 14  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 13  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 12  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 11  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 10  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 9  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 8  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 7  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 6  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 5  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 4  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 3  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 2  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 1  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "check i= 0  site.shape= (1, 2, 1)  |S-I|= 0.0\n",
+      "MPS is in RCF\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mps_simple.checkRCF(sites_new)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e23a792-8e8e-4285-8761-ab760cf63d08",
+   "id": "99fea690-d16f-46d1-9b32-e08c82d7b68d",
    "metadata": {},
    "outputs": [],
    "source": []
