change rdm.x to prop.x

--- a/pyutils/dmrg.ipynb
+++ b/pyutils/dmrg.ipynb
@@ -383,7 +383,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SAVEBIN: rdm.x savebin.dat > savebin.out\n"
+      "SAVEBIN: prop.x savebin.dat > savebin.out\n"
      ]
     },
     {
