add sisj_mf for fe2s2

--- a/pyutils/spinAnalysis/fe2s2.ipynb
+++ b/pyutils/spinAnalysis/fe2s2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "id": "ec17ee63-f436-4a9a-8fe7-5bfb70955942",
    "metadata": {},
    "outputs": [],
@@ -32,19 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 75,
    "id": "98ed0864-0ca4-4094-a488-6f67be200510",
    "metadata": {},
    "outputs": [],
    "source": [
     "import rdmutils\n",
     "\n",
-    "twordm_spatial = rdmutils.get_twordm_spatialorbital_tensor(k,'fe2s2/rdm2mps.0.0.txt')"
+    "frdm = 'fe2s2/rdm2mps.0.0.txt'\n",
+    "#frdm = 'fe2s2/scratch/rdm2mps.0.0.txt'\n",
+    "\n",
+    "twordm_spatial = rdmutils.get_twordm_spatialorbital_tensor(k,frdm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "id": "0ee463ae-eb65-41f0-9965-743243620d00",
    "metadata": {},
    "outputs": [
@@ -54,7 +57,7 @@
        "870.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "id": "bc55be69-6743-42b1-8b67-809bb2df5257",
    "metadata": {},
    "outputs": [
@@ -75,13 +78,24 @@
        "870"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "n*(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "360f2578-8d9e-4775-aebe-a15e116531e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twordm_spinorb = rdmutils.get_twordm_spinorbital_tensor(k,frdm)\n",
+    "onerdm_spinorb = np.einsum('pjjq->pq',twordm_spinorb)/(n-1)"
    ]
   },
   {
@@ -94,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "id": "e0f93c30-5202-40fd-b8ef-73dbdec9d4df",
    "metadata": {},
    "outputs": [],
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "c811aed8-027e-4f8e-8c95-ee7a37a2c820",
    "metadata": {},
    "outputs": [],
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "id": "e623eeeb-c67c-4e36-bd32-3a631cea501b",
    "metadata": {},
    "outputs": [
@@ -126,13 +140,241 @@
        "869.9999999997642"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.einsum('ijji->',twordm_spatial_lmo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "485dc99d-ebcc-4684-a4b5-2d693635682a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onerdm_spatial_lmo = np.einsum('pjjq->pq',twordm_spatial_lmo)/(n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e8c18b55-16ce-4c98-a46c-8a63686174db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.999999999991868"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(np.diag(onerdm_spatial_lmo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "a149eb21-baa3-4996-bad5-d8119e58a574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spinTools\n",
+    "\n",
+    "szpdm = spinTools.szHS(onerdm_spatial_lmo,twordm_spatial_lmo,n,s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fa15a735-3ef4-42f2-97fc-fcb424664373",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4.140358696805941e-12, -8.881784197001252e-16)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(szpdm),np.trace(szpdm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "d41c06e6-ddfe-47de-b141-7d487438d510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pdm1a = (onerdm_spatial_lmo + 2*szpdm)/2\n",
+    "# pdm1b = (onerdm_spatial_lmo - 2*szpdm)/2\n",
+    "pdm1a = np.einsum('ij,pi,qj->pq',onerdm_spinorb[::2,::2],urot,urot)\n",
+    "pdm1b = np.einsum('ij,pi,qj->pq',onerdm_spinorb[1::2,1::2],urot,urot)\n",
+    "delta = np.identity(k)\n",
+    "hdm1a = delta - pdm1a\n",
+    "hdm1b = delta - pdm1b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "c7752359-748c-422f-a23b-270b87687a0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(14.999999999997968, 14.999999999997968)"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.trace(pdm1a),np.trace(pdm1b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "334fe21e-3d71-4660-9bf4-eb5c898dc087",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29.999999999995936"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.trace(pdm1a) + np.trace(pdm1b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "bf3d377c-4670-4907-8b7d-c29b35bf563d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.720770889448898e-13"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(onerdm_spatial_lmo - pdm1a - pdm1b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "73f72989-ada9-401f-8395-5c5596a5c81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.000000000002031, 5.000000000002031)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.trace(hdm1a),np.trace(hdm1b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "355e221e-933b-4f3f-8a80-232317350b1a",
+   "metadata": {},
+   "source": [
+    "### Check idempotency: for a single Slater determinant, this should be zero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "3f3b3295-d5b8-4b9b-b702-29b0b18ec935",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7905694150420949, 0.7905694150420949)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(pdm1a.dot(pdm1a) - pdm1a),\\\n",
+    "np.linalg.norm(pdm1b.dot(pdm1b) - pdm1b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "76059559-9b52-4959-808c-22d9c3cdc8f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twordm_mf_lmo = np.einsum('ps,qr->pqrs',onerdm_spatial_lmo,onerdm_spatial_lmo) \\\n",
+    "              - np.einsum('pr,qs->pqrs',pdm1a,pdm1a) \\\n",
+    "              - np.einsum('pr,qs->pqrs',pdm1b,pdm1b)\n",
+    "diff = twordm_spatial_lmo - twordm_mf_lmo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "82ed9d9a-cf9f-4d1c-b812-b19bb541731b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.082762530297933"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.norm(diff)"
    ]
   },
   {
@@ -145,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "c9354dd5-a2db-41e4-9858-c022157a41f6",
    "metadata": {},
    "outputs": [],
@@ -155,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "9ea15dc2-d7d1-4c30-81d3-ca28e923984c",
    "metadata": {},
    "outputs": [
@@ -164,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[spinAnalysis]: k,n,s= 20 30 0\n",
+      "[spinAnalyzer]: k,n,s= 20 30 0\n",
       "<n>= 29.999999999991868\n",
       "<s2>= 1.0658141036401503e-14\n",
       "igroup= 0 s2exp= 7.473148414752378 seff= 2.2790553097684794\n",
@@ -179,14 +421,14 @@
     }
    ],
    "source": [
-    "import spinAnalysis\n",
+    "import spinAnalyzer\n",
     "\n",
-    "sisj = spinAnalysis.spinAnalysis(twordm_spatial_lmo,groups,k,n,s)"
+    "sisj = spinAnalyzer.spinAnalyzer(twordm_spatial_lmo,groups,k,n,s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 96,
    "id": "8b3a68b3-fbf0-4433-a1ea-1b6cb6992655",
    "metadata": {},
    "outputs": [
@@ -213,18 +455,18 @@
        "0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spinAnalysis.genSpinSpinPlot(sisj,'fe2s2/fe2s2.pdf')"
+    "spinAnalyzer.genSpinSpinPlot(sisj,'fe2s2/fe2s2.pdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 97,
    "id": "af7cf759-bfdb-4168-9547-030e7c975e8c",
    "metadata": {},
    "outputs": [
@@ -240,6 +482,99 @@
    "source": [
     "print(sisj)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "094cc539-6ae0-4bc8-ba9d-3dff2a020d34",
+   "metadata": {},
+   "source": [
+    "## mean-field contribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "d1536ba4-e124-47a6-98cf-1c1d1c0882c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.84986494, -0.0019221 ],\n",
+       "       [-0.0019221 ,  1.83773775]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ng = len(groups)\n",
+    "\n",
+    "# <Si*Sj>\n",
+    "sisj_mf = np.zeros((ng,ng))\n",
+    "for i,ig in enumerate(groups):\n",
+    "    for j,jg in enumerate(groups):\n",
+    "\n",
+    "        pdm1a_pp = np.diag(pdm1a[np.ix_(ig,ig)].diagonal())\n",
+    "        pdm1b_pp = np.diag(pdm1b[np.ix_(ig,ig)].diagonal())\n",
+    "        pdm1a_qq = np.diag(pdm1a[np.ix_(jg,jg)].diagonal())\n",
+    "        pdm1b_qq = np.diag(pdm1b[np.ix_(jg,jg)].diagonal())\n",
+    "        pdm1a_pq = pdm1a[np.ix_(ig,jg)]\n",
+    "        pdm1b_pq = pdm1b[np.ix_(ig,jg)]\n",
+    "        hdm1a_pq = hdm1a[np.ix_(ig,jg)]\n",
+    "        hdm1b_pq = hdm1b[np.ix_(ig,jg)]\n",
+    "\n",
+    "        sisj_mf[i,j] =   0.5*np.einsum('pq,pq',pdm1b_pq,hdm1a_pq) \\\n",
+    "                      +  0.5*np.einsum('pq,pq',pdm1a_pq,hdm1b_pq) \\\n",
+    "                      - 0.25*np.einsum('pp,qq',pdm1a_pp,pdm1b_qq) \\\n",
+    "                      - 0.25*np.einsum('pp,qq',pdm1b_pp,pdm1a_qq) \\\n",
+    "                      + 0.25*np.einsum('pp,qq',pdm1a_pp,pdm1a_qq) \\\n",
+    "                      + 0.25*np.einsum('pp,qq',pdm1b_pp,pdm1b_qq) \\\n",
+    "                      + 0.25*np.einsum('pq,pq',pdm1a_pq,hdm1a_pq) \\\n",
+    "                      + 0.25*np.einsum('pq,pq',pdm1b_pq,hdm1b_pq)\n",
+    "\n",
+    "sisj_mf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5b0bcbe-d456-42c8-a7b0-dbc733ac114b",
+   "metadata": {},
+   "source": [
+    "## difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "d1d3b820-6704-493b-bfc9-671ce15ae842",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5.62328348, -7.04850873],\n",
+       "       [-7.04850873,  5.45633894]])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sisj - sisj_mf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1c48fc4-e21d-4c15-8841-5ba6f78dd46a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
