--- a/pyutils/spinAnalysis/fe4s4.ipynb
+++ b/pyutils/spinAnalysis/fe4s4.ipynb
@@ -134,7 +134,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[spinAnalysis]: k,n,s= 36 54 0\n",
+      "[spinAnalyzer]: k,n,s= 36 54 0\n",
       "<n>= 54.000000000005166\n",
       "<s2>= -7.207034968814696e-11\n",
       "igroup= 0 s2exp= 6.435821308978776 seff= 2.085695517453433\n",
@@ -153,14 +153,14 @@
     }
    ],
    "source": [
-    "import spinAnalysis\n",
+    "import spinAnalyzer\n",
     "\n",
-    "sisj = spinAnalysis.spinAnalysis(twordm_spatial_lmo,groups,k,n,s)"
+    "sisj = spinAnalyzer.spinAnalyzer(twordm_spatial_lmo,groups,k,n,s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "8b3a68b3-fbf0-4433-a1ea-1b6cb6992655",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved to fname= fe4s4.pdf\n"
+      "saved to fname= fe4s4/fe4s4.pdf\n"
      ]
     },
     {
@@ -187,18 +187,18 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spinAnalysis.genSpinSpinPlot(sisj,'fe4s4/fe4s4.pdf')"
+    "spinAnalyzer.genSpinSpinPlot(sisj,'fe4s4/fe4s4.pdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "af7cf759-bfdb-4168-9547-030e7c975e8c",
    "metadata": {},
    "outputs": [
